--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "@ngxs/store": "^3.7.1",
     "@swimlane/ngx-graph": "^6.2.0",
     "core-js": "^2.6.12",
+    "file-saver": "^2.0.5",
     "hammerjs": "^2.0.8",
     "immer": "^1.12.1",
     "jquery": "^1.12.4",
+    "jszip": "^3.6.0",
     "material-design-icons-iconfont": "^4.0.5",
     "ng-pick-datetime": "^7.0.0",
     "ngx-extended-pdf-viewer": "^7.3.2",
