--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ngx-extended-pdf-viewer": "^7.3.2",
     "ngx-page-scroll": "^5.0.1",
     "ngx-scrollbar": "^3.3.4",
+    "ngx-textarea-autosize": "^2.0.3",
     "ngxf-uploader": "^1.6.0",
     "ngxs-reset-plugin": "^1.3.1",
     "rxjs": "~6.3.3",
