--- a/package.json
+++ b/package.json
@@ -24,10 +24,21 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@angular/service-worker": "^16.2.2",
     "@auth0/angular-jwt": "^5.1.2",
+    "@ngxs-labs/emitter": "^5.0.0",
+    "@ngxs/devtools-plugin": "^3.8.1",
+    "@ngxs/form-plugin": "^3.8.1",
+    "@ngxs/logger-plugin": "^3.8.1",
+    "@ngxs/router-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
+    "jquery": "^3.7.1",
+    "material-design-icons-iconfont": "^6.7.0",
+    "ng-pick-datetime": "^7.0.0",
     "ngx-extended-pdf-viewer": "^18.0.0-beta.6",
+    "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.27",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
