--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
+    "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "^16.2.0",
     "@angular/material": "^16.2.1",
     "@angular/platform-browser": "^16.2.0",
@@ -34,11 +35,10 @@
     "@ngxs/store": "^3.8.1",
     "jquery": "^3.7.1",
     "material-design-icons-iconfont": "^6.7.0",
-    "ng-pick-datetime": "^7.0.0",
     "ngx-extended-pdf-viewer": "^18.0.0-beta.6",
     "ngx-scrollbar": "^13.0.3",
     "rxjs": "~7.8.0",
-    "sweetalert2": "^11.7.27",
+    "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
