--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "jquery": "^3.7.1",
     "material-design-icons-iconfont": "^6.7.0",
     "ngx-extended-pdf-viewer": "^18.0.0-beta.6",
+    "ngx-page-scroll": "^11.0.0",
+    "ngx-page-scroll-core": "^11.0.0",
     "ngx-scrollbar": "^13.0.3",
+    "ngxf-uploader": "^2.0.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
