--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "ngx-page-scroll-core": "^11.0.0",
     "ngx-scrollbar": "^13.0.3",
     "ngxf-uploader": "^2.0.0",
+    "ngxs-reset-plugin": "^3.0.0",
     "rxjs": "~7.8.0",
+    "screenfull": "^6.0.2",
     "sweetalert2": "^11.6.13",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
