--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
       "ES2022",
       "dom"
     ],
+    "paths": {
+      "@core/*": ["app/@core/*"],
+      "@shared/*": ["app/@shared/*"],
+      "@models/*": ["app/@models/*"]
+    }
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
