--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,8 @@
               }
             ],
             "styles": [
-              "src/scss/styles.scss"
+              "src/scss/styles.scss",
+              "node_modules/sweetalert2/src/sweetalert2.scss"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["node_modules"]
