--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@angular/service-worker": "^16.2.2",
     "@auth0/angular-jwt": "^5.1.2",
     "@danielmoncada/angular-datetime-picker": "^16.0.1",
+    "@ngxs-labs/dispatch-decorator": "^5.0.0",
     "@ngxs-labs/emitter": "^5.0.0",
     "@ngxs/devtools-plugin": "^3.8.1",
     "@ngxs/form-plugin": "^3.8.1",
     "@ngxs/logger-plugin": "^3.8.1",
     "@ngxs/router-plugin": "^3.8.1",
+    "@ngxs/storage-plugin": "^3.8.1",
     "@ngxs/store": "^3.8.1",
     "@swimlane/ngx-charts": "^20.4.1",
     "@swimlane/ngx-graph": "^8.0.2",
@@ -43,6 +45,7 @@
     "ngx-page-scroll": "^11.0.0",
     "ngx-page-scroll-core": "^11.0.0",
     "ngx-scrollbar": "^13.0.3",
+    "ngx-textarea-autosize": "^2.0.3",
     "ngxf-uploader": "^2.0.0",
     "ngxs-reset-plugin": "^3.0.0",
     "rxjs": "~7.8.0",
