--- a/angular.json
+++ b/angular.json
@@ -49,7 +49,8 @@
             ],
             "styles": [
               "src/scss/styles.scss",
-              "node_modules/sweetalert2/src/sweetalert2.scss"
+              "node_modules/sweetalert2/src/sweetalert2.scss",
+              "node_modules/material-design-icons-iconfont/dist/material-design-icons.css"
             ],
             "stylePreprocessorOptions": {
               "includePaths": ["node_modules"]
