--- a/angular.json
+++ b/angular.json
@@ -86,7 +86,7 @@
                   "maximumError": "5mb"
                 }
               ],
-              "serviceWorker": true
+              "serviceWorker": false
             },
             "development": {
               "buildOptimizer": false,
