--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app-sig",
+  "name": "app-mgd",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
@@ -54,6 +54,9 @@
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
+  "overrides": {
+    "d3-selection": "3.0.0"
+    },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
