--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ngxs/store": "^3.8.1",
     "@swimlane/ngx-charts": "^20.4.1",
     "@swimlane/ngx-graph": "^8.0.2",
+    "axios": "^1.6.0",
     "jquery": "^3.7.1",
     "jszip": "^3.10.1",
     "material-design-icons-iconfont": "^6.7.0",
@@ -56,7 +57,7 @@
   },
   "overrides": {
     "d3-selection": "3.0.0"
-    },
+  },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.0",
     "@angular/cli": "~16.2.0",
